feat: add create pipeline on pr use case